@@ -1823,6 +1823,10 @@
     <diagnostic code="ZAPI0080" name="CANNOT_RETRIEVE_NODE_REFERENCE">
       <value>can not retrieve node-reference for a node that is not in a collection.</value>
     </diagnostic>
+     
+    <diagnostic code="ZAPI0090" name="CANNOT_VALIDATE_NON_ROOT">
+      <value>a non root element cannot be validated in place.</value>
+    </diagnostic>
 
     <!--////////// Zorba Class Serialization Errors ////////////////////////-->
 
