@@ -19,6 +19,7 @@ version 2.2
   * Added split function to the string module that allows for streamable tokenization but doesn't have regular expression
     support.
   * zerr is not predeclared anymore to be http://www.zorba-xquery.com/errors
+  * Fixed bug #912579 (validate-in-place on non-root elements)
 
 version 2.1
 
